--- a/index.html
+++ b/index.html
@@ -1,3 +1,108 @@
----
-layout: default
----
+<!DOCTYPE html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Perfil Profissional</title>
+    <meta name="author" value="Leonardo Romano Camargo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <script src="main.js"></script>
+  </head>
+  <body>
+    <header>
+      <img class="profile" src="images/profile-s.jpg" alt="Foto de perfil" />
+      <div class='cover'></div>
+      <p class="name">Leonardo Romano Camargo</p>
+      <p class="job">Desenvolvedor Backend</p>
+    </header>
+    <main>
+      <section class="about">
+        <h1>Um pouco sobre mim</h1>
+        <p>
+          Desenvolvedor com pouco mais de sete anos de experiência na área.
+          Sendo os cinco primeiros atuando no desenvolvimento e manutenção de
+          ERPs utilizando Delphi e banco de dados relacional Firebird, e nos
+          últimos anos trabalhando no mercado financeiro desenvolvendo
+          aplicações com Javascript, Typescript, Node.js e acessando diversos
+          bancos de dados: PostgreSql, Mysql, MSSql e Mongodb. Também utilizo
+          Docker na grande maioria dos projetos, além de implementar testes
+          unitários e de integração sempre que possível.
+        </p>
+      </section>
+      <section class='social-media'>
+        <h1>Redes sociais</h1>
+        <ul>
+          <li>Linkedin</li>
+          <li>Github</li>
+          <li>Instagram</li>
+          <li>Facebook</li>
+          <li>Twitter</li>
+        </ul>
+      </section>
+      <section class='experience'>
+        <h1>Experiência Profissional</h1>
+        <div>
+          <img src="" alt="Logo da empresa Trademaster" />
+          <h1>Developer Tech Lead</h1>
+          <h2>Trademaster Serviços e Participações SA</h2>
+          <p>maio de 2021 - novembro de 2021</p>
+          <p>São Paulo-SP, Brasil</p>
+        </div>
+        <div>
+          <img src="" alt="Logo da empresa FCamara" />
+          <h1>Software Developer</h1>
+          <h2>Grupo FCamara</h2>
+          <p>agosto de 2019 - maio de 2021</p>
+          <p>São Paulo-SP, Brasil</p>
+        </div>
+      </section>
+      <section class='academic-education'>
+        <h1>Formação Acadêmica</h1>
+        <div>
+          <img src="" alt="Ícone da Faculdade Eduvale de Avaré" />
+          <h1>Faculdade Eduvale de Avaré</h1>
+          <h2>
+            Análise e Desenvolvimento de Sistemas, Tecnologia da Informação
+          </h2>
+          <p>2012-2014</p>
+          <p>
+            Neste curso aprendi sobre modelagem de dados, engenharia de
+            software, boas práticas de desenvolvimento, desenvolvimento Android
+            e pesquisa científica. Tive contato com C++, HTML, CSS, PHP,
+            Genexus, C#, Java SE e banco de dados MySql.
+          </p>
+        </div>
+        <div>
+          <img src="" alt="Ícone da ETEC" />
+          <h1>ETEC Centro Paula Souza</h1>
+          <h2>Técnico em Informática</h2>
+          <p>2010-2011</p>
+          <p>
+            Neste curso eu aprendi lógica de programação e tive contato com
+            Pascal, Java e SQL Server. Desenvolvi um projeto de conclusão
+            utilizando Delphi e banco de dados SQL Server.
+          </p>
+        </div>
+      </section>
+    </main>
+    <!-- <aside>
+      <section>
+        <h1>Proficiência</h1>
+        <ul>
+          <li>Javascript</li>
+          <li>Node.js</li>
+          <li>Typescript</li>
+          <li>Docker</li>
+          <li>PostgreSql</li>
+          <li>Mongodb</li>
+          <li>Teste unitários</li>
+        </ul>
+      </section>
+    </aside> -->
+    <footer>
+      <p>Leonardo Romano Camargo</p>
+      <p>leonardorcamargo@gmail.com</p>
+    </footer>
+  </body>
+</html>
