--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <body>
     <header>
       <img class="profile" src="images/profile-s.jpg" alt="Foto de perfil" />
-      <div class='cover'></div>
-      <p class="name">Leonardo Romano Camargo</p>
-      <p class="job">Desenvolvedor Backend</p>
+      <div class="cover"></div>
+      <h1 class="name">Leonardo Romano Camargo</h1>
+      <h2 class="job">Desenvolvedor Backend</h2>
     </header>
     <main>
       <section class="about">
@@ -30,43 +30,52 @@
           unitários e de integração sempre que possível.
         </p>
       </section>
-      <section class='social-media'>
+      <section class="social-media">
         <h1>Redes sociais</h1>
         <ul>
-          <li>Linkedin</li>
-          <li>Github</li>
-          <li>Instagram</li>
-          <li>Facebook</li>
-          <li>Twitter</li>
+          <li><a class="linkedin" href="https://www.linkedin.com/in/leonardorcamargo" target="_blank">Linkedin</a></li>
+          <li><a class="github" href="https://github.com/leonardorcamargo" target="_blank">Github</a></li>
+          <li><a class="instagram" href="https://www.instagram.com/leonardorcamargo.dev/" target="_blank">Instagram</a></li>
+          <li><a class="facebook" href="https://www.facebook.com/leonardorcamargo.dev/" target="_blank">Facebook</a></li>
+          <li><a class="twitter" href="https://twitter.com/leocamargo_dev" target="_blank">Twitter</a></li>
         </ul>
       </section>
-      <section class='experience'>
+      <section class="experience">
         <h1>Experiência Profissional</h1>
         <div>
-          <img src="" alt="Logo da empresa Trademaster" />
+          <img
+            src="https://media-exp1.licdn.com/dms/image/C4D0BAQHdJYGkw0baDg/company-logo_200_200/0/1635968962438?e=1646265600&v=beta&t=MO-VnVvXSSPe0bd-fsUtYKbVV6U6W-T19DPXymYrJS4"
+            alt="Logo da empresa Trademaster"
+          />
           <h1>Developer Tech Lead</h1>
           <h2>Trademaster Serviços e Participações SA</h2>
-          <p>maio de 2021 - novembro de 2021</p>
-          <p>São Paulo-SP, Brasil</p>
+          <p class="time-course">maio de 2021 - novembro de 2021</p>
+          <p class="locate">São Paulo-SP, Brasil</p>
         </div>
         <div>
-          <img src="" alt="Logo da empresa FCamara" />
+          <img
+            src="https://media-exp1.licdn.com/dms/image/C4E0BAQHGs6KiEjprnw/company-logo_200_200/0/1625519055911?e=1646265600&v=beta&t=SbVvLAnhdeANfAtVC8xf7TiylR87ZYCFJ_Q79CpkFF4"
+            alt="Logo da empresa FCamara"
+          />
           <h1>Software Developer</h1>
           <h2>Grupo FCamara</h2>
-          <p>agosto de 2019 - maio de 2021</p>
-          <p>São Paulo-SP, Brasil</p>
+          <p class="time-course">agosto de 2019 - maio de 2021</p>
+          <p class="locate">São Paulo-SP, Brasil</p>
         </div>
       </section>
-      <section class='academic-education'>
+      <section class="academic-education">
         <h1>Formação Acadêmica</h1>
         <div>
-          <img src="" alt="Ícone da Faculdade Eduvale de Avaré" />
+          <img
+            src="./images/faculdade-eduvale-avare.jpeg"
+            alt="Ícone da Faculdade Eduvale de Avaré"
+          />
           <h1>Faculdade Eduvale de Avaré</h1>
           <h2>
             Análise e Desenvolvimento de Sistemas, Tecnologia da Informação
           </h2>
-          <p>2012-2014</p>
-          <p>
+          <p class="time-course">2012-2014</p>
+          <p class="academic-description">
             Neste curso aprendi sobre modelagem de dados, engenharia de
             software, boas práticas de desenvolvimento, desenvolvimento Android
             e pesquisa científica. Tive contato com C++, HTML, CSS, PHP,
@@ -74,11 +83,11 @@
           </p>
         </div>
         <div>
-          <img src="" alt="Ícone da ETEC" />
+          <img src="./images/etec.png" alt="Ícone da ETEC" />
           <h1>ETEC Centro Paula Souza</h1>
           <h2>Técnico em Informática</h2>
-          <p>2010-2011</p>
-          <p>
+          <p class="time-course">2010-2011</p>
+          <p class="academic-description">
             Neste curso eu aprendi lógica de programação e tive contato com
             Pascal, Java e SQL Server. Desenvolvi um projeto de conclusão
             utilizando Delphi e banco de dados SQL Server.
